@@ -7,14 +7,15 @@
     pollutant = "pm10", type = "default", smooth = FALSE,
     statistic = "frequency", percentile = 90, map = TRUE,
     lon.inc = 1, lat.inc = 1, min.bin = 1, map.fill = TRUE,
-    map.cols = "grey40", map.alpha = 0.3, ...)
+    map.res = "default", map.cols = "grey40",
+    map.alpha = 0.3, ...)
 
   trajPlot(mydata, lon = "lon", lat = "lat",
     pollutant = "pm10", type = "default", smooth = FALSE,
     statistic = "mean", percentile = 90, map = TRUE,
     lon.inc = 1, lat.inc = 1, min.bin = 1, group = NA,
-    map.fill = TRUE, map.cols = "grey40", map.alpha = 0.4,
-    ...)
+    map.fill = TRUE, map.res = "default",
+    map.cols = "grey40", map.alpha = 0.4, ...)
 }
 \arguments{
   \item{mydata}{Data frame, the result of importing a
@@ -63,6 +64,8 @@
   is an alternative way of viewing trajectory frequencies
   compared with \code{statistic = "frequency"}.
 
+  There are also various ways of plotting concentrations.
+
   It is also possible to set \code{statistic =
   "difference"}. In this case trajectories where the
   associated concentration is greater than
@@ -102,6 +105,12 @@
 
   \item{map.fill}{Should the base map be a filled polygon?
   Default is to fill countries.}
+
+  \item{map.res}{The resolution of the base map. By default
+  teh function uses the \sQuote{world} map from the
+  \code{maps} package. If \code{map.res = "hires"} then the
+  (much) more detailed base map \sQuote{worldHires} from
+  the \code{mapdata} package is used.}
 
   \item{map.cols}{If \code{map.fill = TRUE} \code{map.cols}
   controls the fill colour. Examples include \code{map.fill
@@ -167,8 +176,9 @@
   degree intervals, controlled by \code{lat.inc} and
   \code{lon.inc}. Such plots are useful for showing the
   frequency of air mass locations. Note that it is also
-  possible to set \code{method = "hexbin"}, which will
-  produce a plot by hexagonal binning.
+  possible to set \code{method = "hexbin"} for plotting
+  frequencies (not concentrations), which will produce a
+  plot by hexagonal binning.
 
   If \code{statistic = "difference"} the trajectories
   associated with a concentration greater than
